[package]
name = "relay"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Self-hosted Rust relay for node-access"

[lib]
name = "relay"
path = "src/lib.rs"

[[bin]]
name = "relay"
path = "src/main.rs"

[[bin]]
name = "relay-test-client"
path = "src/bin/relay-test-client.rs"

[dependencies]
axum = { version = "0.7", features = ["ws", "http1"] }
bytes = "1"
futures-util = "0.3"
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
